manifests/devops-testing-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/instance: devops-testing-app
  name: devops-testing-app-svc
  namespace: nginx
spec:
  clusterIP: 10.97.244.74
  clusterIPs:
  - 10.97.244.74
  externalIPs:
  - 82.165.230.79
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: devops-testing-app
    nodePort: 30523
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: devops-testing-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
