manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: app.donwaldhartman.co.za
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: devops-testing-app-svc
                port:
                  number: 30253
  tls:
    - hosts:
        - app.donwaldhartman.co.za
      secretName: letsencrypt-prod
