manifests/ingress.yaml
---
kind: Service 
apiVersion: v1 
metadata:
  name: nginx
  labels:
    app: nginx
    layer: frontend
        
spec:
  selector:
    app: nginx

  ports:
   - protocol: TCP
     port: 80
  externalIPs:
   - 82.165.230.79
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: devops-testing-app
  name: nginx-ingress
  namespace: nginx # if non-default namespace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: app.donwaldhartman.co.za
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: http
    - host: argo.donwaldhartman.co.za
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
  - hosts:
    - app.donwaldhartman.co.za
    - argo.donwaldhartman.co.za
    secretName: letsencrypt-prod
